[package]
name = "moongraph-macros"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "ecs", "dag"]
documentation = "https://docs.rs/moongraph-macros/"
repository = "https://github.com/schell/moongraph"
categories = ["concurrency", "algorithms", "data-structures"]
description = "Derive macros for the moongraph library"

[lib]
proc-macro = true
bench = false

[dependencies]
moongraph-macros-syntax = { version = "0.1.0", path = "../moongraph-macros-syntax" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
moongraph = { path = "../moongraph", version = "0.4" }
