[package]
name = "moongraph"
version = "0.3.6"
edition = "2021"
description = "Schedules and runs DAGs accessing shared resources. 🌙"
repository = "https://github.com/schell/moongraph"
license = "MIT OR Apache-2.0"
keywords = ["dag", "graph", "rendergraph", "schedule"]
categories = ["rendering", "game-development", "algorithms"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
dot = ["dagga/dot"]
tutorial = ["dep:aquamarine"]

[dependencies]
aquamarine = { version = "0.4.0", optional = true }
broomdog = "0.1"
dagga = { version = "0.2.1", default-features = false }
log = "0.4.17"
moongraph-macros = { path = "../moongraph-macros", version = "0.1.1" }
rayon = { version = "1.7", optional = true }
snafu = "0.7.4"

[package.metadata.docs.rs]
all-features = true